# ct-resume-hash

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: bench_hash.c  bench_normalize.c
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/src/ct_resume_hash/: __init__.py  _native.c
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
cmake/: CMakeLists.txt
docs/: init.md
docs/explain/: 01-overview.md  02-architecture.md  03-build-test.md  04-ct-notes-and-risks.md
include/: ct_resume_hash.h
src/: ct_resume_hash.c  hash_core.c  hash_core.h  normalize.h  normalize_ct.c  normalize_ref.c  sha256.c  sha256.h
tests/fuzz/: fuzz_normalize.c  fuzz_roundtrip.c
tests/timing/: dudect_runner.c
tests/unit/: test_hash.c  test_normalize.c
