[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-resume-hash"
version = "0.1.0"
description = "Constant-time resume hashing"
requires-python = ">=3.8"
readme = "README.md"
authors = [{name = "ct-resume-hash maintainers"}]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ct_resume_hash"]

